# lessLMcpp

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: create_and_test.yml
src/: linear_regression.cpp  linear_regression.h  main.cpp
test/: X.csv  y.csv
